5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1644_2704.log
== TEST (2019-04-11 16:22:03) 
-- CODE:
nota = float(input("Nota do aluno: " )
var = input("Ira receber bonificaçao? (S/N)")
				 
if (var == "S"):
				 total = nota + nota*10/100
				 
else:
				 total = var
print(round(total, 2))
-- ERROR:
File "XXXX", line 2
    var = input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:22:19) 
-- CODE:
nota = float(input("Nota do aluno: " )
var = input("Ira receber bonificacao? (S/N)")
				 
if (var == "S"):
				 total = nota + nota*10/100
				 
else:
				 total = var
print(round(total, 2))
-- ERROR:
File "XXXX", line 2
    var = input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:23:33) 
-- CODE:
nota = float(input("Nota do aluno: " )
var= input("Ira receber bonificacao? (S/N)")
				 
if (var == "S"):
				 total = nota + nota*10/100
				 
else:
				 total = var
print(round(total, 2))
-- ERROR:
File "XXXX", line 2
    var= input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:23:51) 
-- CODE:
nota = float(input("Nota do aluno: " )
a= input("Ira receber bonificacao? (S/N)")
				 
if (var == "S"):
				 total = nota + nota*10/100
				 
else:
				 total = var
print(round(total, 2))
-- ERROR:
File "XXXX", line 2
    a= input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:24:23) 
-- CODE:
nota = float(input("Nota do aluno: " )
a = input("Ira receber bonificacao? (S/N)")
				 
if (a == "S"):
				 total = nota + nota*10/100
				 
else:
				 total = a
print(round(total, 2))
-- ERROR:
File "XXXX", line 2
    a = input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:25:51) 
-- CODE:
nota = float(input("Nota do aluno: " )
opcao = input("Ira receber bonificacao? (S/N)")
				 
if (opcao.upper() == "S"):
				 total = nota + nota*10/100
				 
else:
				 total = nota
print(round(total, 2))
-- ERROR:
File "XXXX", line 2
    opcao = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:26:32) 
-- CODE:
nota = float(input("Nota do aluno: " )
opcao = input("Ira receber bonificacao? (S/N) ")
				 
if (opcao.upper() == "S"):
				 total = nota + nota*10/100
				 
else:
				 total = nota
print(round(total, 2))
-- ERROR:
File "XXXX", line 2
    opcao = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:26:40) 
-- CODE:
nota=float(input("Nota do aluno: " )
opcao=input("Ira receber bonificacao? (S/N) ")
				 
if (opcao.upper() == "S"):
				 total = nota + nota*10/100
				 
else:
				 total = nota
print(round(total, 2))
-- ERROR:
File "XXXX", line 2
    opcao=input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:27:51) 
-- CODE:
nota=float(input("Nota do aluno: " )
opcao=input("Ira receber bonificacao? (S/N) ")
				 
if (opcao.upper() == "S"):
				 total = nota + nota*10/100
				 
else:
				 total = nota
print(round(total, 2))
-- ERROR:
File "XXXX", line 2
    opcao=input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:30:07) 
-- CODE:
nota=float(input("Nota do aluno: " )
opcao = input("Ira receber bonificacao? (S/N) ")
				 
if (opcao.upper() == "S"):
		 total = nota + nota*10/100
				 
else:
		 total = nota
print(round(total, 2))
-- ERROR:
File "XXXX", line 2
    opcao = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:31:09) 
-- CODE:
nota=float(input("Nota do aluno: " ))
opcao = input("Ira receber bonificacao? (S/N) ")
				 
if (opcao.upper() == "S"):
	total = nota + nota*10/100
				 
else:
	total = nota
print(round(total, 2))
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:31:31) 
-- CODE:
nota=float(input("Nota do aluno: " ))
opcao = input("Ira receber bonificacao? (S/N) ")
				 
if (opcao.upper() == "S"):
	total = nota + nota*10/100
				 
else:
	total = nota
print(round(total, 2))
-- EXECUTION TIME:
0.172947
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
